--- a/lang/en.json
+++ b/lang/en.json
@@ -15,7 +15,9 @@
     "logout_successfully"    : "You've been logged out successfully",
     "created_successfully"   : "Added successfully",
     "category_not_found"     : "This category is not exists",
-    "deleted_successfully"   : "Deleted successfully"
+    "deleted_successfully"   : "Deleted successfully",
+    "wrong_credentials" : "Your email or password are wrong, Please try again"
+
 
 
 }
