--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,6 +1,6 @@
 {
     "first_name_required"    : "الاسم الأول مطلوب",
-    "last_name_required"     : "الاسم الأخير مطلوب",
+    "family_name_required"   : "الاسم الأخير مطلوب",
     "email_required"         : "البريد الإلكتروني مطلوب",
     "email_unique"           : "البريد الإلكتروني موجود بالفعل",
     "password_required"      : "كلمة المرور مطلوبة",
@@ -16,5 +16,5 @@
     "created_successfully"   : "تمت الاضافة بنجاح",
     "category_not_found"     : "هذا القسم غير موجود",
     "deleted_successfully"   : "تم الحذف بنجاح",
-    "wrong_credentials" : "بريدك الإلكتروني أو كلمة المرور خاطئة ، يرجى المحاولة مرة أخرى"
+    "wrong_credentials"      : "بريدك الإلكتروني أو كلمة المرور خاطئة ، يرجى المحاولة مرة أخرى"
 }
