--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,6 @@
 {
     "first_name_required"    : "First Name field is required",
-    "last_name_required"     : "Last Name field is required",
+    "family_name_required"   : "Last Name field is required",
     "email_required"         : "Email field is required",
     "email_unique"           : "Email is already exists",
     "password_required"      : "Password field is required",
@@ -16,7 +16,7 @@
     "created_successfully"   : "Added successfully",
     "category_not_found"     : "This category is not exists",
     "deleted_successfully"   : "Deleted successfully",
-    "wrong_credentials" : "Your email or password are wrong, Please try again"
+    "wrong_credentials"      : "Your email or password are wrong, Please try again"
 
 
 
