📦 NEW: countries CRUD

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -16,5 +16,47 @@
     "created_successfully"   : "تمت الاضافة بنجاح",
     "category_not_found"     : "هذا القسم غير موجود",
     "deleted_successfully"   : "تم الحذف بنجاح",
-    "wrong_credentials"      : "بريدك الإلكتروني أو كلمة المرور خاطئة ، يرجى المحاولة مرة أخرى"
+    "wrong_credentials"      : "بريدك الإلكتروني أو كلمة المرور خاطئة ، يرجى المحاولة مرة أخرى",
+    "admin"                  : "مؤسس النظام",
+    "mafqodat"               : "المفقودات",
+    "logout"                 : "تسجيل الخروج",
+    "home"                   : "الصفحة الرئيسية",
+    "jadaara"                : "صنع بكل حب  في معامل جدارة",
+    "copy_right"             : "جميع الحقوق محفوظة لنظام المفقودات",
+    "congrats"               : "تهانينا",
+    "employees"              : "الموظفين",
+    "new_employee"           : "اضافة موظف جديد",
+    "id"                     : "مسلسل",
+    "full_name"              : "الاسم بالكامل",
+    "mobile"                 : "رقم الجوال",
+    "phone"                  : "رقم الهاتف",
+    "email"                  : "البريد الالكترونى",
+    "country"                : "البلد",
+    "city"                   : "المدينة",
+    "actions"                : "الاجراءات",
+    "countries"              : "الدول",
+    "new_country"            : "اضافة دولة جديدة",
+    "country_name"           : "اسم الدولة",
+    "name_ar"                : "الاسم بالعربى",
+    "name_en"                : "الاسم بالانجليزى",
+    "write_name_ar"          : "اكتب الاسم باللغة العربية",
+    "write_name_en"          : "اكتب الاسم باللغة الانجليزية",
+    "add"                    : "اضافة",
+    "something_went_wrong"   : "حدث خطأ ما ، يرجى المحاولة مرة أخرى",
+    "name_ar_required"       : "مطلوب الاسم باللغة العربية",
+    "name_ar_min"            : "الاسم باللغة العربية لا يقل عن 3 أحرف",
+    "name_en_required"       : "مطلوب الاسم باللغة الإنجليزية",
+    "name_en_min"            : "الاسم باللغة الإنجليزية بحد أدنى 3 أحرف",
+    "not_found"              : "هذا العنصر غير موجود",
+    "updated_successfully"   : "تم التعديل بنجاح",
+    "delete"                 : "حذف",
+    "no"                     : "لا",
+    "want_delete"            : "هل تريد الحذف ؟",
+    "canceled"               : "تم إلإلغاء",
+    "edit_country"           : "تعديل دولة",
+    "update"                 : "تعديل",
+    ""                       : ""
+
+
+
 }
