--- a/lang/en.json
+++ b/lang/en.json
@@ -16,7 +16,49 @@
     "created_successfully"   : "Added successfully",
     "category_not_found"     : "This category is not exists",
     "deleted_successfully"   : "Deleted successfully",
-    "wrong_credentials"      : "Your email or password are wrong, Please try again"
+    "wrong_credentials"      : "Your email or password are wrong, Please try again",
+    "admin"                  : "Admin",
+    "mafqodat"               : "Mafqodat",
+    "logout"                 : "Logout",
+    "home"                   : "Home",
+    "jadaara"                : "Made with love in jadaara labs",
+    "copy_right"             : "All rights reserved to the Mafqodat system",
+    "congrats"               : "Congrats",
+    "employees"              : "Employees",
+    "new_employee"           : "Add new employee",
+    "id"                     : "ID",
+    "full_name"              : "Full Name",
+    "mobile"                 : "Mobile Number",
+    "phone"                  : "Phone Number",
+    "email"                  : "E-mail",
+    "country"                : "Country",
+    "city"                   : "City",
+    "actions"                : "Actions",
+    "countries"              : "Countries",
+    "new_country"            : "Add new country",
+    "country_name"           : "Country Name",
+    "name_ar"                : "Name in arabic",
+    "name_en"                : "Name in english",
+    "write_name_ar"          : "Write name in arabic",
+    "write_name_en"          : "Write name in english",
+    "add"                    : "Add",
+    "something_went_wrong"   : "Something went wrong, please try again",
+    "name_ar_required"       : "name in arabic is required",
+    "name_ar_min"            : "name in arabic minimum is 3 letters",
+    "name_en_required"       : "name in english is required",
+    "name_en_min"            : "name in english minimum is 3 letters",
+    "not_found"              : "This item is not exists",
+    "updated_successfully"   : "Updated successfully",
+    "delete"                 : "Delete",
+    "no"                     : "No",
+    "want_delete"            : "Do you want to delete ?",
+    "canceled"               : "Canceled",
+    "edit_country"           : "Edit Country",
+    "update"                 : "Update",
+    ""                       : ""
+
+
+
 
 
 
