--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,20 +1,22 @@
 {
-    "first_name_required"    : "الاسم الأول مطلوب",
-    "family_name_required"   : "الاسم الأخير مطلوب",
-    "email_required"         : "البريد الإلكتروني مطلوب",
-    "email_unique"           : "البريد الإلكتروني موجود بالفعل",
-    "password_required"      : "كلمة المرور مطلوبة",
-    "password_min"           : "الحد الأدنى لكلمة المرور هو 6 أرقام",
-    "address_required"       : "العنوان مطلوب",
-    "phone_required"         : "الهاتف مطلوب",
-    "mobile_required"        : "الجوال مطلوب",
-    "city_required"          : "المدينة مطلوب",
-    "country_required"       : "البلد مطلوب",
+    "first_name_required": "الاسم الأول مطلوب",
+    "family_name_required": "الاسم الأخير مطلوب",
+    "email_required": "البريد الإلكتروني مطلوب",
+    "email_unique": "البريد الإلكتروني موجود بالفعل",
+    "password_required": "كلمة المرور مطلوبة",
+    "password_min": "الحد الأدنى لكلمة المرور هو 6 أرقام",
+    "address_required": "العنوان مطلوب",
+    "phone_required": "الهاتف مطلوب",
+    "mobile_required": "الجوال مطلوب",
+    "city_required": "المدينة مطلوب",
+    "country_required": "البلد مطلوب",
     "registered_successfully": "لقد تم تسجيلك بنجاح",
-    "login_successfully"     : "لقد تم تسجيل دخولك بنجاح",
-    "logout_successfully"    : "لقد تم تسجيل خروجك بنجاح",
-    "created_successfully"   : "تمت الاضافة بنجاح",
-    "category_not_found"     : "هذا القسم غير موجود",
-    "deleted_successfully"   : "تم الحذف بنجاح",
-    "wrong_credentials"      : "بريدك الإلكتروني أو كلمة المرور خاطئة ، يرجى المحاولة مرة أخرى"
+    "login_successfully": "لقد تم تسجيل دخولك بنجاح",
+    "logout_successfully": "لقد تم تسجيل خروجك بنجاح",
+    "created_successfully": "تمت الاضافة بنجاح",
+    "category_not_found": "هذا القسم غير موجود",
+    "deleted_successfully": "تم الحذف بنجاح",
+    "wrong_credentials": "بريدك الإلكتروني أو كلمة المرور خاطئة ، يرجى المحاولة مرة أخرى",
+    "code_sent": "تم إرسال الرمز بنجاح",
+    "user_not_found": "هذا المستخدم غير موجود"
 }
