--- a/lang/en.json
+++ b/lang/en.json
@@ -1,23 +1,22 @@
 {
-    "first_name_required"    : "First Name field is required",
-    "family_name_required"   : "Last Name field is required",
-    "email_required"         : "Email field is required",
-    "email_unique"           : "Email is already exists",
-    "password_required"      : "Password field is required",
-    "password_min"           : "Password minimum is 6 numbers",
-    "address_required"       : "Address field is required",
-    "phone_required"         : "Phone field is required",
-    "mobile_required"        : "Mobile field is required",
-    "city_required"          : "City field is required",
-    "country_required"       : "Country field is required",
+    "first_name_required": "First Name field is required",
+    "family_name_required": "Last Name field is required",
+    "email_required": "Email field is required",
+    "email_unique": "Email is already exists",
+    "password_required": "Password field is required",
+    "password_min": "Password minimum is 6 numbers",
+    "address_required": "Address field is required",
+    "phone_required": "Phone field is required",
+    "mobile_required": "Mobile field is required",
+    "city_required": "City field is required",
+    "country_required": "Country field is required",
     "registered_successfully": "You've been registered successfully",
-    "login_successfully"     : "You've been logged in successfully",
-    "logout_successfully"    : "You've been logged out successfully",
-    "created_successfully"   : "Added successfully",
-    "category_not_found"     : "This category is not exists",
-    "deleted_successfully"   : "Deleted successfully",
-    "wrong_credentials"      : "Your email or password are wrong, Please try again"
-
-
-
+    "login_successfully": "You've been logged in successfully",
+    "logout_successfully": "You've been logged out successfully",
+    "created_successfully": "Added successfully",
+    "category_not_found": "This category is not exists",
+    "deleted_successfully": "Deleted successfully",
+    "wrong_credentials": "Your email or password are wrong, Please try again",
+    "code_sent": "Code sent successfully",
+    "user_not_found": "This Mail is not exists"
 }
