📦 NEW: Station CRUD

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -90,6 +90,24 @@
     "create_employee"        : "اضافة موظف",
     "update_employee"        : "تعديل موظف",
     "delete_employee"        : "حذف موظف",
+    "type_required"          : "النوع مطلوب",
+    "name_required"          : "الإسم مطلوب",
+    "details_required"       : "التفاصيل مطلوبة",
+    "number_required"        : "الرقم مطلوب",
+    "number_numeric"         : "يجب أن يكون الرقم رقميًا",
+    "number_unique"          : "هذا الرقم موجود بالفعل",
+    "location_required"      : "الموقع مطلوب",
+    "station_type"           : "نوع المحطة",
+    "station_name"           : "إسم المحطة",
+    "station_number"         : "رقم المحطة",
+    "station_details"        : "التفاصيل",
+    "station_location"       : "عنوان المحطة",
+    "station_description"    : "بيانات اخرى",
+    "stations"               : "المحطات",
+    "new_station"            : "اضافة محطة جديدة",
+    "metro"                  : "المترو",
+    "bus"                    : "حافلة",
+    "edit_station"           : "تعديل محطة",
     ""                       : ""
 
 
