--- a/lang/en.json
+++ b/lang/en.json
@@ -88,6 +88,24 @@
     "create_employee"        : "Create Employee",
     "update_employee"        : "Update Employee",
     "delete_employee"        : "Delete Employee",
+    "type_required"          : "Type is required",
+    "name_required"          : "Name is required",
+    "details_required"       : "Details is required",
+    "number_required"        : "Number is required",
+    "number_numeric"         : "Number must be numeric",
+    "number_unique"          : "This number is already exists",
+    "location_required"      : "Location is required",
+    "station_type"           : "Station Type",
+    "station_name"           : "Station Name",
+    "station_number"         : "Station Number",
+    "station_details"        : "Station Details",
+    "station_location"       : "Station Location",
+    "station_description"    : "Station Description",
+    "stations"               : "Stations",
+    "new_station"            : "Add New Station",
+    "metro"                  : "Metro",
+    "bus"                    : "Bus",
+    "edit_station"           : "Edit Station",
     ""                       : ""
 
 
