📦 NEW: Lost items CRUD

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -108,6 +108,11 @@
     "metro"                  : "المترو",
     "bus"                    : "حافلة",
     "edit_station"           : "تعديل محطة",
+    "details"                : "تفاصيل المفقود",
+    "storage"                : "مكان التخزين",
+    "edit_item"              : "تعديل مفقود",
+    "items"                  : "المفقودات",
+    "new_item"               : "اضافة مفقود جديد",
     ""                       : ""
 
 
