--- a/lang/en.json
+++ b/lang/en.json
@@ -106,6 +106,11 @@
     "metro"                  : "Metro",
     "bus"                    : "Bus",
     "edit_station"           : "Edit Station",
+    "details"                : "Details",
+    "storage"                : "Storage",
+    "items"                  : "Lost Items",
+    "edit_item"              : "Edit Item",
+    "new_item"               : "Add New Item",
     ""                       : ""
 
 
