📦 NEW: Admin profile

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -113,6 +113,7 @@
     "edit_item"              : "تعديل مفقود",
     "items"                  : "المفقودات",
     "new_item"               : "اضافة مفقود جديد",
+    "profile_setting"        : "اعدادات الحساب",
     ""                       : ""
 
 
