--- a/lang/en.json
+++ b/lang/en.json
@@ -111,6 +111,7 @@
     "items"                  : "Lost Items",
     "edit_item"              : "Edit Item",
     "new_item"               : "Add New Item",
+    "profile_setting"        : "Profile Setting",
     ""                       : ""
 
 
