👌 IMPROVE: reset password

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -114,8 +114,19 @@
     "items"                  : "المفقودات",
     "new_item"               : "اضافة مفقود جديد",
     "profile_setting"        : "اعدادات الحساب",
+    "email_reset_password"   : "أدخل بريدك الإلكتروني وسنرسل لك تعليمات لإعادة تعيين كلمة مرورك",
+    "send_link"              : "أرسل رابط إعادة التعيين",
+    "back_login"             : "العودة لتسجيل الدخول",
+    "link_sent"              : "تم ارسال رابط اعادة كلمة المرور الي البريد الالكتروني الخاص بك",
+    "email_not_found"        : "البريد الالكتروني غير موجود",
+    "reset_password"         : "اعادة تعيين كلمة المرور",
+    "to_reset_password"      : "لاعادة تعيين كلمة مرور جديدة بالرجاء الضغط على اللينك الموجود بالاسفل",
+    "different_password"     : "يجب أن تكون كلمة مرورك الجديدة مختلفة عن كلمة مرورك القديمة",
+    "new_password"           : "كلمة مرور جديدة",
+    "password_confirmation"  : "تأكيد كلمة المرور",
+    "change_password"        : "تغيير كلمة المرور",
+    "password_confirmed"     : "تأكيد كلمة المرور غير متطابق",
+    "select_station"         : "اختر محطة   طمو  ",
     ""                       : ""
-
-
 
 }
