👌 IMPROVE: lost items

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,25 +1,25 @@
 {
-    "code_sent": "تم إرسال الرمز بنجاح",
-    "user_not_found": "هذا المستخدم غير موجود",
-    "code_verified": "تم تأكيد الرمز بنجاح",
-    "code_not_verified": "لم يتم تأكيد الرمز بنجاح",
-    "password_changed": "تم تغيير كلمة المرور بنجاح",
-    "password_not_changed": "لم يتم تغيير كلمة المرور بنجاح",
-    "welcome_to_mafqodat": "مرحبا بك في مفقودات",
-    "please_login": "من فضلك قم بتسجيل الدخول",
-    "first_name_required": "الاسم الأول مطلوب",
-    "family_name_required": "الاسم الأخير مطلوب",
-    "email_required": "البريد الإلكتروني مطلوب",
-    "email_unique": "البريد الإلكتروني موجود بالفعل",
-    "password": "كلمة المرور",
-    "password_required": "كلمة المرور مطلوبة",
-    "password_min": "الحد الأدنى لكلمة المرور هو 6 أرقام",
-    "forget_password": "نسيت كلمة المرور؟",
-    "address_required": "العنوان مطلوب",
-    "phone_required": "الهاتف مطلوب",
-    "mobile_required": "الجوال مطلوب",
-    "city_required": "المدينة مطلوب",
-    "country_required": "البلد مطلوب",
+    "code_sent"              : "تم إرسال الرمز بنجاح",
+    "user_not_found"         : "هذا المستخدم غير موجود",
+    "code_verified"          : "تم تأكيد الرمز بنجاح",
+    "code_not_verified"      : "لم يتم تأكيد الرمز بنجاح",
+    "password_changed"       : "تم تغيير كلمة المرور بنجاح",
+    "password_not_changed"   : "لم يتم تغيير كلمة المرور بنجاح",
+    "welcome_to_mafqodat"    : "مرحبا بك في مفقودات",
+    "please_login"           : "من فضلك قم بتسجيل الدخول",
+    "first_name_required"    : "الاسم الأول مطلوب",
+    "family_name_required"   : "الاسم الأخير مطلوب",
+    "email_required"         : "البريد الإلكتروني مطلوب",
+    "email_unique"           : "البريد الإلكتروني موجود بالفعل",
+    "password"               : "كلمة المرور",
+    "password_required"      : "كلمة المرور مطلوبة",
+    "password_min"           : "الحد الأدنى لكلمة المرور هو 6 أرقام",
+    "forget_password"        : "نسيت كلمة المرور؟",
+    "address_required"       : "العنوان مطلوب",
+    "phone_required"         : "الهاتف مطلوب",
+    "mobile_required"        : "الجوال مطلوب",
+    "city_required"          : "المدينة مطلوب",
+    "country_required"       : "البلد مطلوب",
     "registered_successfully": "لقد تم تسجيلك بنجاح",
     "login_successfully"     : "لقد تم تسجيل دخولك بنجاح",
     "logout_successfully"    : "لقد تم تسجيل خروجك بنجاح",
@@ -132,6 +132,15 @@
     "password_confirmation"  : "تأكيد كلمة المرور",
     "change_password"        : "تغيير كلمة المرور",
     "password_confirmed"     : "تأكيد كلمة المرور غير متطابق",
-    "select_station"         : "اختر محطة   طمو  ",
-    "": ""
+    "select_station"         : "اختر محطة",
+    "primary_colour"         : "اللون الأساسي",
+    "secondary_colour"       : "اللون الثانوي",
+    "tertiary_colour"        : "الألوان الثلاثية",
+    "select_category"        : "اختر قسم",
+    "second_address"         : "العنوان الثاني",
+    "post_code"              : "الرمز البريدي",
+    "date"                   : "تاريخ",
+    "time"                   : "وقت",
+    "is_delivered"           : "تم الاستلام",
+    ""                       : ""
 }
