--- a/lang/en.json
+++ b/lang/en.json
@@ -1,25 +1,25 @@
 {
-    "code_sent": "Code sent successfully",
-    "user_not_found": "This Mail is not exists",
-    "code_verified": "Code verified successfully",
-    "code_not_verified": "Code is not verified",
-    "password_changed": "Password changed successfully",
-    "password_not_changed": "Password is not changed",
-    "welcome_to_mafqodat": "Welcome To Mafqodat",
-    "please_login": "Please Login",
-    "first_name_required": "First Name field is required",
-    "family_name_required": "Last Name field is required",
-    "email_required": "Email field is required",
-    "email_unique": "Email is already exists",
-    "password": "Password",
-    "password_required": "Password field is required",
-    "password_min": "Password minimum is 6 numbers",
-    "forget_password": "Forget password ?",
-    "address_required": "Address field is required",
-    "phone_required": "Phone field is required",
-    "mobile_required": "Mobile field is required",
-    "city_required": "City field is required",
-    "country_required": "Country field is required",
+    "code_sent"              : "Code sent successfully",
+    "user_not_found"         : "This Mail is not exists",
+    "code_verified"          : "Code verified successfully",
+    "code_not_verified"      : "Code is not verified",
+    "password_changed"       : "Password changed successfully",
+    "password_not_changed"   : "Password is not changed",
+    "welcome_to_mafqodat"    : "Welcome To Mafqodat",
+    "please_login"           : "Please Login",
+    "first_name_required"    : "First Name field is required",
+    "family_name_required"   : "Last Name field is required",
+    "email_required"         : "Email field is required",
+    "email_unique"           : "Email is already exists",
+    "password"               : "Password",
+    "password_required"      : "Password field is required",
+    "password_min"           : "Password minimum is 6 numbers",
+    "forget_password"        : "Forget password ?",
+    "address_required"       : "Address field is required",
+    "phone_required"         : "Phone field is required",
+    "mobile_required"        : "Mobile field is required",
+    "city_required"          : "City field is required",
+    "country_required"       : "Country field is required",
     "registered_successfully": "You've been registered successfully",
     "login_successfully"     : "You've been logged in successfully",
     "logout_successfully"    : "You've been logged out successfully",
@@ -131,5 +131,14 @@
     "change_password"        : "change password",
     "password_confirmed"     : "the password confirmation does not match",
     "select_station"         : "Select Station",
-    "": ""
+    "primary_colour"         : "Primary Color",
+    "secondary_colour"       : "Secondary Color",
+    "tertiary_colour"        : "Tertiary Color",
+    "select_category"        : "Select Category",
+    "second_address"         : "Second Address",
+    "post_code"              : "Post Code",
+    "date"                   : "Date",
+    "time"                   : "Time",
+    "is_delivered"           : "Is delivered",
+    ""                       : ""
 }
