--- a/lang/ar.json
+++ b/lang/ar.json
@@ -148,5 +148,6 @@
     "total_delivered_items"  : "إجمالي المفقودات المستلمة",
     "total_stations"         : "إجمالي المحطات",
     "total_employees"        : "إجمالي الموظفين",
+    "print"                  : "طباعة",
     ""                       : ""
 }
