--- a/lang/ar.json
+++ b/lang/ar.json
@@ -149,5 +149,8 @@
     "total_stations"         : "إجمالي المحطات",
     "total_employees"        : "إجمالي الموظفين",
     "print"                  : "طباعة",
+    "name_ar_unique"         : "الإسم بالعربي موجود بالفعل",
+    "name_en_unique"         : "الإسم بالإنجليزي موجود بالفعل",
+    "country_not_found"      : "البلد غير موجود",
     ""                       : ""
 }
