📦 NEW: city api controller

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -152,5 +152,6 @@
     "name_ar_unique"         : "الإسم بالعربي موجود بالفعل",
     "name_en_unique"         : "الإسم بالإنجليزي موجود بالفعل",
     "country_not_found"      : "البلد غير موجود",
+    "city_not_found"         : "المدينة غير موجودة",
     ""                       : ""
 }
