📦 NEW: station controller api

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -153,5 +153,6 @@
     "name_en_unique"         : "الإسم بالإنجليزي موجود بالفعل",
     "country_not_found"      : "البلد غير موجود",
     "city_not_found"         : "المدينة غير موجودة",
+    "station_not_found"      : "المحطة غير موجودة",
     ""                       : ""
 }
