👌 IMPROVE: Api item controller

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -163,5 +163,15 @@
     "primary_colour_required": "اللون الأساسي مطلوب",
     "postcode_required"      : "الرمز البريدي مطلوب",
     "old_password_wrong"     : "كلمة المرور القديمة غير صحيحة",
+    "item_not_found"         : "المفقود غير موجود",
+    "must_be_email"          : "يجب أن يكون البريد الإلكتروني صحيح",
+    "first_name_min"         : "الاسم الأول لا يقل عن 3 أحرف",
+    "family_name_min"        : "الاسم الأخير لا يقل عن 3 أحرف",
+    "phone_min"              : "رقم الهاتف لا يقل عن 8 أرقام",
+    "phone_max"              : "رقم الهاتف لا يزيد عن 12 أرقام",
+    "mobile_min"             : "رقم الجوال لا يقل عن 8 أرقام",
+    "mobile_max"             : "رقم الجوال لا يزيد عن 12 أرقام",
+    "address_min"            : "العنوان لا يقل عن 3 أحرف",
+    "secondary_address_min"  : "العنوان الثاني لا يقل عن 3 أحرف",
     ""                       : ""
 }
