--- a/lang/ar.json
+++ b/lang/ar.json
@@ -173,5 +173,6 @@
     "mobile_max"             : "رقم الجوال لا يزيد عن 12 أرقام",
     "address_min"            : "العنوان لا يقل عن 3 أحرف",
     "secondary_address_min"  : "العنوان الثاني لا يقل عن 3 أحرف",
+    "not_authorized"         : "ليس لديك الصلاحية للقيام بهذا الإجراء",
     ""                       : ""
 }
