--- a/lang/ar.json
+++ b/lang/ar.json
@@ -189,5 +189,6 @@
     "create_item"            : "إنشاء مفقود",
     "update_item"            : "تعديل مفقود",
     "delete_item"            : "حذف مفقود",
+    "permissions"            : "الصلاحيات",
     ""                       : ""
 }
