--- a/lang/ar.json
+++ b/lang/ar.json
@@ -192,5 +192,6 @@
     "permissions"            : "الصلاحيات",
     "item_name"              : "اسم المفقود",
     "item_type"              : "نوع المفقود",
+    "qr_code"                : "رمز QR",
     ""                       : ""
 }
